Edit .ipynb code

--- a/app__.ipynb
+++ b/app__.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Setup Environment\n",
+    "\n",
+    "First, we'll install the required Python libraries. Run this cell to make sure `gradio`, `pandas`, and `plotly` are available in your environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install necessary libraries for the notebook environment\n",
+    "%pip install gradio pandas plotly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Health Calculators\n",
     "\n",
     "This cell contains the code from `health_calculators.py`. It defines classes for calculating BMI, BMR, and TDEE."
@@ -793,9 +812,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install necessary libraries for the notebook environment\n",
-    "%pip install gradio pandas plotly\n",
-    "\n",
     "# Initialize managers (classes are defined in the cells above)\n",
     "personal_manager = PersonalManager()\n",
     "food_manager = FoodManager()\n",
